ver 0.24 (not yet released)
* protocol
  - new command "searchcount" (case-insensitive "count")
  - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
  - "save" can append to or replace an existing playlist
  - filter "prio" (for "playlistfind"/"playlistsearch")
  - limit "player" idle events to the current partition
  - operator "starts_with"
  - show PCRE support in "config" response
  - apply Unicode normalization to case-insensitive filter expressions
* archive
  - add option to disable archive plugins in mpd.conf
* input
  - curl: add "connect_timeout" configuration
  - curl: fix busy loop after connection failed
* decoder
  - hybrid_dsd: remove
  - opus: implement bitrate calculation
  - wavpack: require libwavpack version 5
* player
  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
  - "one-shot" consume mode
* tags
  - new tags "TitleSort", "Mood"
* output
  - pipewire: fix corruption bug due to missing lock
  - pipewire: map tags "Date" and "Comment"
* switch to C++20
  - GCC 10 or clang 11 (or newer) recommended
* static partition configuration
* Windows
  - build with libsamplerate
  - remove JACK DLL support
* remove Haiku support
* remove Boost dependency
* require libfmt 7 or later

ver 0.23.12 (2023/01/17)
* input
  - curl: require CURL 7.55.0 or later
* decoder
  - mad: fix integer underflow with very small files
* tags
  - fix crash bug due to race condition
* output
  - pipewire: adjust to PipeWire 0.3.64 API change
* fix build failures with GCC 13

ver 0.23.11 (2022/11/28)
* database
  - simple: move default database to ~/.cache/mpd/db from ~/.cache/mpd.db
  - simple: default "cache_directory" to ~/.cache/mpd/mounts
* macOS: fix build failure "no archive members specified"
* Windows
  - fix crash bug (stack buffer overflow) after I/O errors
  - fix path traversal bug because backslash was allowed in playlist names
* Android/Windows
  - update OpenSSL to 3.0.7
  - re-enable CURL's verbose error strings
